# khabaroff-public-feedback-bot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
bot/: __init__.py  config.py  db.py  flow.py  fsm.py  handlers.py  llm.py  main.py  notification.py  service.py  voice.py
content/: clarify_questions.yaml  review_template.yaml  texts.yaml  thinking.yaml
openspec/changes/archive/2026-02-26-implement-telegram-feedback-bot-v1/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-26-implement-telegram-feedback-bot-v1/specs/bot-content-configuration/: spec.md
openspec/changes/archive/2026-02-26-implement-telegram-feedback-bot-v1/specs/feedback-dialog-flow/: spec.md
openspec/changes/archive/2026-02-26-implement-telegram-feedback-bot-v1/specs/review-generation-and-editing/: spec.md
openspec/specs/bot-content-configuration/: spec.md
openspec/specs/feedback-dialog-flow/: spec.md
openspec/specs/review-generation-and-editing/: spec.md
openspec/specs/review-persistence-and-notification/: spec.md
openspec/specs/voice-transcription-pipeline/: spec.md
prompts/: analyze_answer.md  generate_review.md  rephrase_review.md
tests/: test_assemblyai_client.py  test_config_content.py  test_db_lifecycle.py  test_db_notification.py  test_fsm_logic.py  test_llm_client.py  test_llm_fallback.py  test_service_orchestration.py  test_voice_pipeline.py
(+2 files in other folders)
